--- a/tekton/secrets/argocd-env-secret-example.yaml
+++ b/tekton/secrets/argocd-env-secret-example.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: argocd-env-secret
+  name: argocd-env
 data:
   ARGOCD_USERNAME: YWRtaW4=
   ARGOCD_PASSWORD: YWRtaW4=
