--- a/tekton/tasks/github-add-pull-request.yaml
+++ b/tekton/tasks/github-add-pull-request.yaml
@@ -3,6 +3,9 @@ kind: Task
 metadata:
   name: github-add-pull-request
 spec:
+  workspaces:
+  - name: github-secret
+  - name: config
   params:
   - name: PULL_REQUEST_BODY
     description: The body to be used for the pull request
@@ -12,10 +15,9 @@ spec:
     description: Title of the pull request
     type: string
     default: "Pull request created by Tekton task github-add-pull-request"
-  - name: GITHUB_REPO
+  - name: GITHUB_REPO_CONFIGMAPKEY
     description: The github owner/repo to use
     type: string
-    default: sa-mw-dach/manuela-gitops
   - name: GIT_BRANCH_HEAD
     description: The branch to pull from
     type: string
@@ -27,18 +29,7 @@ spec:
   steps:
   - name: create-pull-request
     image: curlimages/curl
-    env:
-      - name: GITHUB_TOKEN
-        valueFrom:
-          secretKeyRef:
-            name: github
-            key: token
-      - name: GITHUB_USER
-        valueFrom:
-          secretKeyRef:
-            name: github
-            key: user      
     script: |
-        #!/usr/bin/env sh
-        #echo curl -v -u :$GITHUB_TOKEN https://api.github.com/repos/$(params.GITHUB_REPO)/pulls -d '{"title":"$(params.PULL_REQUEST_TITLE)","body":"$(params.PULL_REQUEST_BODY)","head":"$(params.GIT_BRANCH_HEAD)","base":"$(params.GIT_BRANCH_BASE)"}'
-        curl -v -u :$GITHUB_TOKEN https://api.github.com/repos/$(params.GITHUB_REPO)/pulls -d '{"title":"$(params.PULL_REQUEST_TITLE)","body":"$(params.PULL_REQUEST_BODY)","head":"$(params.GIT_BRANCH_HEAD)","base":"$(params.GIT_BRANCH_BASE)"}'
+      GITREPO=$(cat $(workspaces.config.path)/$(params.GITHUB_REPO_CONFIGMAPKEY))
+      PULLREQUEST_API_ENDPOINT=$(echo -n "$GITREPO" | sed "s|github.com|api.github.com/repos|" | sed "s/\.git$//g")/pulls
+      curl -v -u :$(cat $(workspaces.github-secret.path)/token) $PULLREQUEST_API_ENDPOINT -d '{"title":"$(params.PULL_REQUEST_TITLE)","body":"$(params.PULL_REQUEST_BODY)","head":"$(params.GIT_BRANCH_HEAD)","base":"$(params.GIT_BRANCH_BASE)"}'
