--- a/tekton/tasks/bumpversion.yaml
+++ b/tekton/tasks/bumpversion.yaml
@@ -1,53 +1,88 @@
-kind: Task
 apiVersion: tekton.dev/v1beta1
+kind: Task
 metadata:
   name: bumpversion
 spec:
-  resources:
-    inputs:
-    - name: source
-      type: git
-      targetPath: git-repo
+  workspaces:
+    - name: gitrepos
+      description: The git repo will be cloned onto the volume backing this workspace
   params:
-  - name: PATH_CONTEXT
+  - name: subdirectory
+    description: subdirectory inside the "gitrepos" workspace to clone the git repo into
     type: string
-  - name: GIT_USERNAME
-    description: The username to be used for the git commit.
+    default: "dev"
+  - name: component_name
+    description: component name
     type: string
-    default: "manuela-tekton"
-  - name: GIT_EMAIL
-    description: The email to be used for the git commit.
+  - name: version_file_path
+    description: path within subdirectory where the base VERSION of the component resides
     type: string
-    default: "manuela-team@redhat.com"
-#  results:
-#    - name: new-version
-#      description: The current date in unix timestamp format
+  results:
+  - name: image-tag
+    description: the new build version based on the last tags and VERSION file
+  - name: git-tag
+    description: the new build version based on the last tags and VERSION file
   steps:
-  - name: bumpversion
+  - name: current-tag
+    image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.11.0
+    script: |
+      VERSION_GLOB="build-$(params.component_name)-$(cat $(params.version_file_path))-*"
+
+      # existing tag based on glob
+      LAST_TAG=$(git tag --sort "version:refname" -l $VERSION_GLOB | tail -n 1)
+      EXIT_CODE="$?"
+      if [ "$EXIT_CODE" != 0 ] ; then
+        exit $EXIT_CODE
+      fi
+
+      # if tag doesn't exist, create new one
+      if [ "$LAST_TAG" == "" ] ; then
+        LAST_TAG="build-$(params.component_name)-$(cat $(params.version_file_path))-0"
+      fi
+
+      # Make sure we don't add a trailing newline to the result!
+      echo -n "$LAST_TAG" >/scratch/VERSION
+    volumeMounts:
+    - mountPath: /scratch
+      name: scratch  
+    workingDir: $(workspaces.gitrepos.path)/$(params.subdirectory)
+  - name: bump-tag
     image: quay.io/manuela/bumpversiontask:latest
     script: |
-      #!/usr/bin/env bash
-      cd git-repo/$(params.PATH_CONTEXT)/
-      bump2version --commit build VERSION
-  - name: push-version-to-git
-    image: alpine/git
-    env:
-      - name: GITHUB_TOKEN
-        valueFrom:
-          secretKeyRef:
-            name: github
-            key: token
-      - name: GITHUB_USER
-        valueFrom:
-          secretKeyRef:
-            name: github
-            key: user
+      cd /scratch
+      echo -e "[bumpversion]\ncurrent_version = $(cat VERSION)" >.bumpversion.cfg
+      cat <<EOF >>.bumpversion.cfg
+      commit = False
+      tag = False
+      parse = (?P<prefix>.*)\-(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\-(?P<build>\d+)
+      serialize = {prefix}-{major}.{minor}.{patch}-{build:03d}
+      
+      [bumpversion:part:build]
+
+      [bumpversion:file:VERSION]
+      EOF
+
+      bump2version build /scratch/VERSION
+
+      sed "s/build-$(params.component_name)-//" /scratch/VERSION >$(results.image-tag.path)
+    volumeMounts:
+    - mountPath: /scratch
+      name: scratch  
+    workingDir: $(workspaces.gitrepos.path)/$(params.subdirectory)
+  - name: tag-repo
+    image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.11.0
     script: |
-        #!/usr/bin/env sh
-        echo "https://$GITHUB_USER:$GITHUB_TOKEN@github.com" > ~/.git-credentials
-        git config --global credential.helper store 'store --file ~/.git-credentials'
-        git config --global user.email "$(params.GIT_EMAIL)"
-        git config --global user.name "$(params.GIT_USERNAME)"
-        git commit -a -m "Version Bump"
-        git push --set-upstream origin master
-    workingdir: /workspace/git-repo
+      VERSION=$(cat /scratch/VERSION)
+      git tag $VERSION
+      EXIT_CODE="$?"
+      if [ "$EXIT_CODE" != 0 ] ; then
+        exit $EXIT_CODE
+      fi
+      echo -n "$VERSION" > $(results.git-tag.path)
+    volumeMounts:
+    - mountPath: /scratch
+      name: scratch  
+    workingDir: $(workspaces.gitrepos.path)/$(params.subdirectory)
+  volumes:
+  - emptyDir: {}
+    name: scratch
