--- a/tekton/tasks/kustomization.yaml
+++ b/tekton/tasks/kustomization.yaml
@@ -1,9 +1,19 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
-- argocd-task-sync-and-wait.yaml
+- git-clone-with-tags.yaml
 - bumpversion.yaml
-- github-add-comment.yaml
+- s2i.yaml
 - gitops-imagetag.yaml
+- git-commit.yaml
+- github-push.yaml
+- argocd-sync-and-wait.yaml
 - mock.yaml
+- cleanup.yaml
+- git-checkout.yaml
+- tkn.yaml
+- fail.yaml
 - skopeo-copy.yaml
-- skopeo-tag-image.yaml
 - github-add-pull-request.yaml
+- openshift-instantiate-template.yaml
