--- a/tekton/tasks/skopeo-copy.yaml
+++ b/tekton/tasks/skopeo-copy.yaml
@@ -3,24 +3,20 @@ apiVersion: tekton.dev/v1beta1
 metadata:
   name: skopeo-copy
 spec:
-  resources:
-    inputs:
-    - name: source
-      type: git
-      targetPath: git-repo
-    - name: remote-image
-      type: image 
-    - name: local-image
-      type: image
+  workspaces:
+  - name: config
+    description: configmap contents
+  - name: pushsecret
+    description: push secret for quay
   params:
-  - name: PATH_CONTEXT
-    type: string  
+  - name: TAG
+    type: string
+  - name: SOURCE_IMAGE
+    type: string
+  - name: TARGET_IMAGE_CONFIGMAPKEY
+    type: string
   steps:
   - name: skopeo-copy
     image: quay.io/redhat-emea-ssa-team/skopeo-ubi:latest
     script: |
-      #!/usr/bin/env bash
-      cd git-repo/$(params.PATH_CONTEXT)/
-      export SEMVER=$(cat VERSION)
-      echo skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(resources.inputs.local-image.url):$SEMVER docker://$(resources.inputs.remote-image.url):$SEMVER
-      skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(resources.inputs.local-image.url):$SEMVER docker://$(resources.inputs.remote-image.url):$SEMVER
+      skopeo copy --authfile=$(workspaces.pushsecret.path)/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(params.SOURCE_IMAGE):$(params.TAG) docker://$(cat $(workspaces.config.path)/$(params.TARGET_IMAGE_CONFIGMAPKEY)):$(params.TAG)
