--- a/tekton/pipelines/seed.yaml
+++ b/tekton/pipelines/seed.yaml
@@ -75,7 +75,7 @@ spec:
     - name: component_name
       value: iot-frontend
     - name: version_file_path
-      value: $(params.PATH_CONTEXT)/TESTVERSION
+      value: $(params.PATH_CONTEXT)/VERSION
 
   - name: bump-build-version-iot-consumer
     taskRef:
@@ -90,7 +90,7 @@ spec:
     - name: component_name
       value: iot-consumer
     - name: version_file_path
-      value: $(params.PATH_CONTEXT)/TESTVERSION
+      value: $(params.PATH_CONTEXT)/VERSION
 
   - name: bump-build-version-iot-anomaly
     taskRef:
@@ -105,7 +105,7 @@ spec:
     - name: component_name
       value: iot-anomaly
     - name: version_file_path
-      value: $(params.PATH_CONTEXT)/TESTVERSION
+      value: $(params.PATH_CONTEXT)/VERSION
 
   - name: bump-build-version-iot-software-sensor
     taskRef:
@@ -120,7 +120,7 @@ spec:
     - name: component_name
       value: iot-swsensor
     - name: version_file_path
-      value: $(params.PATH_CONTEXT)/TESTVERSION
+      value: $(params.PATH_CONTEXT)/VERSION
 
   - name: s2i-build-iot-frontend
     taskRef:
