Add build-artifacts PV to builds to host maven and other artifacts

--- a/tekton/persistent-volume-claims/build-artifacts.yaml
+++ b/tekton/persistent-volume-claims/build-artifacts.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: maven-repo
+  name: build-artifacts
 spec:
   resources:
     requests:
