--- a/tekton/persistent-volume-claims/kustomization.yaml
+++ b/tekton/persistent-volume-claims/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
 - iot-software-sensor.yaml
 - iot-anomaly-detection.yaml
 - stage-production.yaml
-- maven-repo.yaml
+- build-artifacts.yaml
