--- a/tekton/pipelines/build-and-test.yaml
+++ b/tekton/pipelines/build-and-test.yaml
@@ -8,6 +8,7 @@ spec:
   - name: config
   - name: github-secret
   - name: argocd-env-secret
+  - name: build-artifacts
   params:
   - name: S2I_BUILDER_IMAGE
     type: string
@@ -65,6 +66,8 @@ spec:
     workspaces:
     - name: gitrepos
       workspace: gitrepos
+    - name: build-artifacts
+      workspace: build-artifacts
     params:
     - name: TLSVERIFY
       value: "false"
