--- a/networkpathoperator/Vagrantfile
+++ b/networkpathoperator/Vagrantfile
@@ -66,7 +66,8 @@ Vagrant.configure("2") do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
-    OPERATORSDK_RELEASE_VERSION=v0.15.2
+    OPERATORSDK_RELEASE_VERSION=v0.17.0
+    OPERATOR_REGISTRY_VERSION=v1.11.1
     OC_RELEASE_VERSION=4.3
     sudo dnf clean all
     sudo dnf -y install docker
@@ -78,6 +79,9 @@ Vagrant.configure("2") do |config|
     tar xzvf oc.tar.gz
     sudo mv oc /usr/local/bin/oc
     sudo ln -s /usr/local/bin/oc /usr/local/bin/kubectl
+    curl -OJLs https://github.com/operator-framework/operator-registry/releases/download/${OPERATOR_REGISTRY_VERSION}/linux-amd64-opm
+    sudo mv linux-amd64-opm /usr/local/bin/opm
+    sudo chmod +x /usr/local/bin/opm
     sudo dnf -y install ansible
     sudo dnf -y install python3-ansible-runner
     sudo dnf -y install python3-kubernetes
