Enable chained builds https://github.com/sa-mw-dach/manuela/issues/292

--- a/tekton/pipelines/build-and-test.yaml
+++ b/tekton/pipelines/build-and-test.yaml
@@ -24,6 +24,9 @@ spec:
   - name: CONFIGMAP_PREFIX
     type: string
     default: IOT_CONSUMER
+  - name: CHAINED_BUILD_DOCKERFILE 
+    type: string 
+    default: ""
   tasks:
   - name: git-clone-dev
     taskRef:
@@ -76,6 +79,8 @@ spec:
       value: $(tasks.bump-build-version.results.image-tag)
     - name: OUTPUT_IMAGE
       value: $(params.LOCAL_IMAGE)
+    - name: CHAINED_BUILD_DOCKERFILE
+      value: $(params.CHAINED_BUILD_DOCKERFILE)
 
   - name: push-dev-tag
     taskRef:
