--- a/tekton/images/httpd-ionic/Dockerfile
+++ b/tekton/images/httpd-ionic/Dockerfile
@@ -4,7 +4,7 @@ RUN microdnf install -y yum && \
     microdnf -y clean all && \
     yum -y module enable httpd:2.4 && \
     yum install -y --setopt=tsflags=nodocs httpd && \
-    rpm -V $INSTALL_PKGS && \
+    rpm -V httpd && \
     yum -y clean all --enablerepo='*' && \ 
     sed -i 's/Listen 80/Listen 8080/' /opt/rh/httpd24/root/etc/httpd/conf/httpd.conf && \
     chgrp -R 0 /var/log/httpd24 /opt/rh/httpd24/root/var/run/httpd && \
