--- a/tekton/images/httpd-ionic/Dockerfile
+++ b/tekton/images/httpd-ionic/Dockerfile
@@ -2,10 +2,8 @@ FROM registry.access.redhat.com/ubi8-minimal
 
 RUN microdnf install -y httpd && \
     microdnf -y clean all && \
-    sed -i 's/Listen 80/Listen 8080/' /etc/httpd/conf/httpd.conf && \
-    chgrp -R 0 /var/log/httpd24 /opt/rh/httpd24/root/var/run/httpd && \
-    chmod -R g=u /var/log/httpd24 /opt/rh/httpd24/root/var/run/httpd
-
+    sed -i 's/Listen 80/Listen 8080/' /etc/httpd/conf/httpd.conf 
+    
 COPY rewrite.conf /etc/httpd/conf.d/
 
 ENV HTTPD_CONTAINER_SCRIPTS_PATH=/usr/share/container-scripts/httpd/ \
