change directory to /var/www/html

--- a/tekton/images/httpd-ionic/rewrite.conf
+++ b/tekton/images/httpd-ionic/rewrite.conf
@@ -1,4 +1,4 @@
-<Directory "/opt/rh/httpd24/root/var/www/html">
+<Directory "/var/www/html">
 
     RewriteEngine On
     # If an existing asset or directory is requested go to it as it is
