use custom httpd-ionic image for chained build

--- a/tekton/images/httpd-ionic/Dockerfile
+++ b/tekton/images/httpd-ionic/Dockerfile
@@ -22,7 +22,6 @@ EXPOSE 8080
 
 USER 1001
 
-#CMD ["/usr/bin/run-httpd"]
-
 STOPSIGNAL SIGWINCH
-ENTRYPOINT ["/usr/sbin/httpd", "-D", "FOREGROUND"]
+#ENTRYPOINT ["/usr/sbin/httpd", "-D", "FOREGROUND"]
+CMD ["/usr/sbin/httpd", "-D", "FOREGROUND"]
