--- a/tekton/templates/build-iot-frontend.yaml
+++ b/tekton/templates/build-iot-frontend.yaml
@@ -42,4 +42,5 @@ objects:
     - name: CONFIGMAP_PREFIX
       value: IOT_FRONTEND
     - name: CHAINED_BUILD_DOCKERFILE
-      value: "FROM centos/httpd-24-centos7\nCOPY --from=0 /opt/app-root/output /var/www/html/"
+      #value: "FROM centos/httpd-24-centos7\nCOPY --from=0 /opt/app-root/output /var/www/html/"
+      value: "FROM quay.io/manuela/httpd-ionic\nCOPY --from=0 /opt/app-root/output /var/www/html/"
