--- a/tekton/pipelines/seed.yaml
+++ b/tekton/pipelines/seed.yaml
@@ -136,7 +136,7 @@ spec:
     - name: BUILDER_IMAGE
       value: nodeshift/ubi8-s2i-web-app
     - name: CHAINED_BUILD_DOCKERFILE
-      value: "FROM centos/httpd-24-centos7\nCOPY --from=0 /opt/app-root/output /var/www/html/"
+      value: "FROM quay.io/manuela/httpd-ionic\nCOPY --from=0 /opt/app-root/output /var/www/html/"
     - name: TAG
       value: $(tasks.bump-build-version-iot-frontend.results.image-tag)
     - name: OUTPUT_IMAGE
