--- a/tekton/templates/kustomization.yaml
+++ b/tekton/templates/kustomization.yaml
@@ -9,3 +9,5 @@ resources:
 - build-iot-anomaly-detection.yaml
 - stage-production-pipelinerun.yaml
 - seed.yaml
+- build-image-httpd-ionic.yaml
+- build-image-bumpversion.yaml
