--- a/tekton/images/pushprox/Dockerfile
+++ b/tekton/images/pushprox/Dockerfile
@@ -1,10 +1,12 @@
 FROM golang as builder
 
-RUN go get -v github.com/robustperception/pushprox && \
-    cd ${GOPATH-$HOME/go}/src/github.com/robustperception/pushprox/proxy && \
-    go build && \
-    cd ${GOPATH-$HOME/go}/src/github.com/robustperception/pushprox/client && \
-    go build 
+# RUN go get -v github.com/robustperception/pushprox && \
+#     cd ${GOPATH-$HOME/go}/src/github.com/robustperception/pushprox/proxy && \
+#     go build && \
+#     cd ${GOPATH-$HOME/go}/src/github.com/robustperception/pushprox/client && \
+#     go build 
+
+RUN git clone https://github.com/robustperception/pushprox.git && cd pushprox && make build
 
 ENTRYPOINT /go/bin/proxy
 
