--- a/tekton/pipelines/build-images.yaml
+++ b/tekton/pipelines/build-images.yaml
@@ -15,6 +15,9 @@ spec:
   - name: OUTPUT_IMAGE_CONFIGMAPKEY
     type: string
     default: HTTPD_IONIC_REMOTE_IMAGE
+  - name: DEV_REVISION 
+    type: string 
+    default: master
   tasks:
   - name: git-clone-dev
     taskRef:
@@ -28,7 +31,7 @@ spec:
     - name: url_configmapkey
       value: GIT_DEV_REPO_URL
     - name: revision
-      value: master
+      value: $(params.DEV_REVISION)
     - name: subdirectory
       value: dev
     - name: deleteExisting
