Update ODH 0.5.1 channel from alpha to legacy

--- a/quickstart/01_namespaces_and_operators.yaml
+++ b/quickstart/01_namespaces_and_operators.yaml
@@ -125,7 +125,7 @@ metadata:
   name: opendatahub-operator
   namespace: iotdemo
 spec:
-  channel: alpha
+  channel: legacy
   installPlanApproval: Automatic
   name: opendatahub-operator
   source: community-operators
