--- a/namespaces_and_operator_subscriptions/iotdemo/odh-operator-subscription.yaml
+++ b/namespaces_and_operator_subscriptions/iotdemo/odh-operator-subscription.yaml
@@ -3,7 +3,7 @@ kind: Subscription
 metadata:
   name: opendatahub-operator
 spec:
-  channel: alpha
+  channel: legacy
   installPlanApproval: Automatic
   name: opendatahub-operator
   source: community-operators
