--- a/operator_subscriptions/opendatahub/kustomization.yaml
+++ b/operator_subscriptions/opendatahub/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 
 resources:
 - odh-operator-subscription.yaml
+# Seldon CRD should exist on OCP3 and OCP4
+# Uncomment if you install in your own OCP (e.g. CRC)
+# - seldon-deployment-crd.yaml
