--- a/operator_subscriptions/openshift-pipelines/openshift-pipelines-operator-subscription.yaml
+++ b/operator_subscriptions/openshift-pipelines/openshift-pipelines-operator-subscription.yaml
@@ -1,12 +1,12 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: openshift-pipelines-operator
+  name: openshift-pipelines-operator-rh
   namespace: openshift-operators
 spec:
-  channel: canary
+  channel: ocp-4.4
   installPlanApproval: Automatic
-  name: openshift-pipelines-operator
-  source: community-operators
+  name: openshift-pipelines-operator-rh
+  source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: openshift-pipelines-operator.v0.11.2
+  startingCSV: openshift-pipelines-operator.v1.0.1
