--- a/operator_subscriptions/amq/amq-operator-subscription.yaml
+++ b/operator_subscriptions/amq/amq-operator-subscription.yaml
@@ -3,9 +3,9 @@ kind: Subscription
 metadata:
   name: amq-broker
 spec:
-  channel: current-76
+  channel: current
   installPlanApproval: Automatic
   name: amq-broker
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: amq-broker-operator.v0.13.0
+  startingCSV: amq-broker-operator.v0.15.0
