add build-artifacts workspace for seed pipe

--- a/tekton/pipelines/seed.yaml
+++ b/tekton/pipelines/seed.yaml
@@ -9,6 +9,7 @@ spec:
   - name: github-secret
   - name: argocd-env-secret
   - name: quay-secret
+  - name: build-artifacts
   params:
   - name: S2I_BUILDER_IMAGE
     type: string
@@ -128,6 +129,8 @@ spec:
     workspaces:
     - name: gitrepos
       workspace: gitrepos
+    - name: build-artifacts
+      workspace: build-artifacts
     params:
     - name: TLSVERIFY
       value: "false"
@@ -148,6 +151,8 @@ spec:
     workspaces:
     - name: gitrepos
       workspace: gitrepos
+    - name: build-artifacts
+      workspace: build-artifacts
     params:
     - name: TLSVERIFY
       value: "false"
@@ -166,6 +171,8 @@ spec:
     workspaces:
     - name: gitrepos
       workspace: gitrepos
+    - name: build-artifacts
+      workspace: build-artifacts
     params:
     - name: TLSVERIFY
       value: "false"
@@ -184,6 +191,8 @@ spec:
     workspaces:
     - name: gitrepos
       workspace: gitrepos
+    - name: build-artifacts
+      workspace: build-artifacts
     params:
     - name: TLSVERIFY
       value: "false"
