use configmap generator https://github.com/sa-mw-dach/manuela/issues/350

--- a/components/iot-frontend/manifests/kustomization.yaml
+++ b/components/iot-frontend/manifests/kustomization.yaml
@@ -8,4 +8,8 @@ resources:
 - iot-frontend-is.yaml
 - iot-frontend-route.yaml
 - iot-frontend-svc.yaml
-- iot-frontend-configmap.yaml
+
+configMapGenerator:
+- name: iot-frontend-cfg
+  files:
+  - config.json=iot-frontend-configmap-config.json
