--- a/components/iot-anomaly-detection/manifests/kustomization.yaml
+++ b/components/iot-anomaly-detection/manifests/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- odh-instance.yaml
+#- odh-instance.yaml
+- odh-kfdef.yaml
 - iot-anomaly-detection-bc.yaml  
 - iot-anomaly-detection-route.yaml   
 - iot-anomaly-detection-is.yaml  
