--- a/components/iot-anomaly-detection/manifests/seldon-subscription-v1.2.0.yaml
+++ b/components/iot-anomaly-detection/manifests/seldon-subscription-v1.2.0.yaml
@@ -3,7 +3,7 @@ kind: Subscription
 metadata:
   generation: 1
   name: seldon-operator
-  namespace: test-anomaly-detection
+  namespace: iotdemo
 spec:
   channel: alpha
   installPlanApproval: Automatic
