--- a/operator_subscriptions/camel-k/camel-k-operator-subscription.yaml
+++ b/operator_subscriptions/camel-k/camel-k-operator-subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: red-hat-camel-k
 spec:
   channel: techpreview
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: red-hat-camel-k
   source: redhat-operators
   sourceNamespace: openshift-marketplace
