--- a/operator_subscriptions/amq/amq-operator-subscription.yaml
+++ b/operator_subscriptions/amq/amq-operator-subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: amq-broker
 spec:
   channel: current
-  installPlanApproval: Manual
+  installPlanApproval: Automatic
   name: amq-broker
   source: redhat-operators
   sourceNamespace: openshift-marketplace
