--- a/operator_subscriptions/seldon/seldon-subscription.yaml
+++ b/operator_subscriptions/seldon/seldon-subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: seldon-operator
 spec:
   channel: alpha
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: seldon-operator
   source: community-operators
   sourceNamespace: openshift-marketplace
