--- a/operator_subscriptions/opendatahub/opendatahub-subscription.yaml
+++ b/operator_subscriptions/opendatahub/opendatahub-subscription.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-operators
 spec:
   channel: beta
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: opendatahub-operator
   source: community-operators
   sourceNamespace: openshift-marketplace
