--- a/operator_subscriptions/openshift-pipelines/openshift-pipelines-operator-subscription.yaml
+++ b/operator_subscriptions/openshift-pipelines/openshift-pipelines-operator-subscription.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-operators
 spec:
   channel: ocp-4.4
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: openshift-pipelines-operator-rh
   source: redhat-operators
   sourceNamespace: openshift-marketplace
