--- a/operator_subscriptions/opendatahub/odh-operator-subscription.yaml
+++ b/operator_subscriptions/opendatahub/odh-operator-subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: opendatahub-operator
 spec:
   channel: legacy
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: opendatahub-operator
   source: community-operators
   sourceNamespace: openshift-marketplace
