--- a/components/iot-consumer/package.json
+++ b/components/iot-consumer/package.json
@@ -1,7 +1,6 @@
 {
   "name": "iot-consumer",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,15 +11,15 @@
     "url": "git+https://github.com/ortwinschneider/iot-consumer.git"
   },
   "dependencies": {
-    "mqtt": "^3.0.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "log4js": "^4.5.1",
+    "express": "^4.18.2",
+    "log4js": "^6.9.1",
+    "mqtt": "^4.3.7",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "socket.io": "^2.3.0"
+    "request-promise": "^4.2.6",
+    "socket.io": "^2.5.0"
   },
   "keywords": [
     "mqtt"
@@ -30,5 +29,6 @@
   "bugs": {
     "url": "https://github.com/ortwinschneider/iot-consumer/issues"
   },
-  "homepage": "https://github.com/ortwinschneider/iot-consumer#readme"
+  "homepage": "https://github.com/ortwinschneider/iot-consumer#readme",
+  "description": ""
 }
